fix: some basic css contrast issues

--- a/assets/githubmarkdown.css
+++ b/assets/githubmarkdown.css
@@ -377,7 +377,7 @@
 .markdown-body h2 {
   font-weight: 600;
   font-size: 1.5em;
-  padding-top: 1.5rem;
+  padding-top: 0.25rem;
   /* border-bottom: 1px solid var(--color-border-muted) */
 }
 
